# Workplace-Proxy

./: .env.example  .gitignore  Qdrant.md  README.md  docker-compose.prod.yml  docker-compose.yml  mcp_testing.md  package-lock.json  package.json  render.yaml  start-services.cjs  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/memory_service/: README.md  __init__.py  embeddings.py  main.py  qdrant_client_setup.py  search.py  seed_data.py
backend/orchestrator/: __init__.py  main.py
backend/orchestrator/agents/: base.py  contextualizer.py  interceptor.py  scheduler.py  translator.py
backend/orchestrator/api/: routes.py  schemas.py
backend/orchestrator/communication/: protocol.py
backend/orchestrator/config/: settings.py
backend/orchestrator/consensus/: engine.py
backend/orchestrator/debate/: engine.py  transcript.py
backend/orchestrator/demo/: scenarios.py
backend/orchestrator/integrations/: adk_integration.py  lyzr_integration.py
backend/orchestrator/interfaces/: mcp_interface.py  mcp_transport.py  memory_interface.py
backend/orchestrator/llm/: backend.py
backend/orchestrator/memory/: conversation.py
backend/orchestrator/metrics/: store.py
backend/orchestrator/utils/: json_utils.py  logging_config.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_debate.py  test_logging.py  test_schemas.py
calendar-mcp-server/: .dockerignore  .env.example  Dockerfile  index.js  package-lock.json  package.json
docs/: SUPABASE CREDENTIALS.md  hackathon.txt  prd.txt  (+6 more)
(+152 files in other folders)
