[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "project-clarity-orchestrator"
version = "0.1.0"
description = "Role 2 – Multi-Agent Orchestrator for Workplace Proxy"
requires-python = ">=3.11"
dependencies = [
    # Already installed on this machine
    "google-genai>=2.8.0",       # Gemini LLM SDK (new unified SDK)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    # Must install
    "pydantic-settings>=2.4.0",  # pip install pydantic-settings
    "structlog>=24.4.0",         # pip install structlog
    # Framework integrations (installed; core MVP also works without them)
    "google-adk>=2.3.0",       # ADK agent runner — installed v2.3.0
    "lyzr-adk>=0.1.11",        # Official Lyzr SDK (replaces old lyzr; Python 3.13 compatible) — installed v0.1.11
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",     # TestClient dependency
]
adk = [
    "google-adk>=0.5.0",
]
lyzr = [
    "lyzr-adk>=0.1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
